--- a/.github/workflows/naukri.yml
+++ b/.github/workflows/naukri.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Upload Test Reports
         if: always()
-        uses: actions/upload-artifact@v4  # Updated from v3 to v4
+        uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: target/surefire-reports/
