--- a/.github/workflows/naukri.yml
+++ b/.github/workflows/naukri.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
@@ -19,16 +20,20 @@ jobs:
           java-version: '21'
 
       - name: Install Chrome
-        run: sudo apt-get install -y google-chrome-stable  # Installs Chrome on GitHub runner
+        run: sudo apt-get install -y google-chrome-stable
 
-      - name: Kill Existing Chrome Processes
-        run: pkill -f chrome || true  # Ensures no old Chrome processes interfere
+      - name: Install ChromeDriver
+        run: |
+          sudo apt-get install -y chromedriver
+          echo "CHROME_BIN=$(which google-chrome)" >> $GITHUB_ENV
+          echo "CHROMEDRIVER_BIN=$(which chromedriver)" >> $GITHUB_ENV
 
-      - name: Install Dependencies
+      - name: Install Maven Dependencies
         run: mvn clean install -DskipTests
 
-      - name: Run TestNG Tests
-        run: mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testng.xml
+      - name: Run TestNG Tests (Headless Mode)
+        run: |
+          mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testng.xml
         env:
           NAUKRI_EMAIL: ${{ secrets.NAUKRI_EMAIL }}
           NAUKRI_PASSWORD: ${{ secrets.NAUKRI_PASSWORD }}
