--- a/.github/workflows/naukri.yml
+++ b/.github/workflows/naukri.yml
@@ -3,7 +3,7 @@ name: Naukri Automation
 on:
   schedule:
     - cron: '30 1 * * *'  # Runs daily at 1:30 AM UTC (7:00 AM IST)
-  workflow_dispatch:       # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
   naukri-test:
@@ -21,12 +21,6 @@ jobs:
 
       - name: Install Chrome
         run: sudo apt-get install -y google-chrome-stable
-
-      - name: Install ChromeDriver
-        run: |
-          sudo apt-get install -y chromedriver
-          echo "CHROME_BIN=$(which google-chrome)" >> $GITHUB_ENV
-          echo "CHROMEDRIVER_BIN=$(which chromedriver)" >> $GITHUB_ENV
 
       - name: Install Maven Dependencies
         run: mvn clean install -DskipTests
