--- a/.github/workflows/naukri.yml
+++ b/.github/workflows/naukri.yml
@@ -18,18 +18,23 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-      - name: Kill Existing Chrome Processes
-        run: pkill -f chrome || true  # Ensures no old Chrome processes are running
 
-      - name: Install Chrome
-        run: sudo apt-get install -y google-chrome-stable
+      - name: Install Chrome and Xvfb
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable xvfb
 
-      - name: Install Maven Dependencies
+      - name: Start Virtual Display
+        run: Xvfb :99 -screen 0 1920x1080x24 &
+
+      - name: Set DISPLAY Environment Variable
+        run: echo "DISPLAY=:99" >> $GITHUB_ENV
+
+      - name: Install Dependencies
         run: mvn clean install -DskipTests
 
-      - name: Run TestNG Tests (Headless Mode)
-        run: |
-          mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testng.xml
+      - name: Run Selenium Tests
+        run: mvn clean test -Dsurefire.suiteXmlFiles=src/test/resources/testng.xml
         env:
           NAUKRI_EMAIL: ${{ secrets.NAUKRI_EMAIL }}
           NAUKRI_PASSWORD: ${{ secrets.NAUKRI_PASSWORD }}
