--- a/.github/workflows/naukri.yml
+++ b/.github/workflows/naukri.yml
@@ -2,7 +2,7 @@ name: Naukri Automation
 
 on:
   schedule:
-    - cron: '30 1 * * *'  # Runs daily at 1:30 AM UTC (7:00 AM IST)
+  //  - cron: '30 1 * * *'  # Runs daily at 1:30 AM UTC (7:00 AM IST)
   workflow_dispatch:
 
 jobs:
